# options-data-loader

./: .env.example  .gitignore  Makefile  README.md  contracts.md  ops_cheatsheet.md  pre-commit.yaml  project.toml  pyproject.toml  scratch  tickers.csv
duckdb_load_monitor/: check_year.sql  compute_daily_vols.sh  create_numbered_maturity_tables.sh
scripts/: build_curves.sh  run_rv_daily_polars.py
sql/: 01_pairs.sql  02_atm.old.sql  02_atm.sql  03_slope.sql  04_curve_header.sql
src/: fetch_ivol_by_list.py  fetch_polygon_flatfiles.old.py  ledger.py  paths.py  rv_daily_polars.py  rv_daily_polars.py.bak  rv_daily_polars_old.py
src/options_data_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
temp/: rv_daily_polars.py
