# pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-data-loader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas", "ivolatility", "python-dotenv", "pyarrow"]

[project.scripts]
ivol-fetch = "fetch_ivol_by_list:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["fetch_ivol_by_list", "paths", "ledger"]
