# pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-data-loader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas", "ivolatility", "python-dotenv", "pyarrow","polars"]

# Optional extras you install as:  pip install -e ".[polygon]"

[project.optional-dependencies]
polygon = ["boto3", "pandas_market_calendars", "tqdm"]
dev = ["black", "ruff", "pre-commit"]

[project.scripts]
ivol-fetch = "fetch_ivol_by_list:main"
poly-fetch = "fetch_polygon_flatfiles:main"  # <- add this

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["fetch_ivol_by_list", "fetch_polygon_flatfiles", "paths", "ledger"]
